--- a/index.html
+++ b/index.html
@@ -1,5 +1,24 @@
 <html>
+    <head>
+        <title>Bernie Healthcare Calculator</title>
+        <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout.mapping/2.4.1/knockout.mapping.js"></script>
+        <script>
+            $(function () {
+                var jsModel = { income: 50000 };
+                Model = ko.mapping.fromJS(jsModel);
+            });
+        </script>
+    </head>
 	<body>
-		Test
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <a class="navbar-brand" href="/">Bernie Sanders Healthcare Calculator</a>
+        </div>
+        <div class="container body-content">
+            <input data-bind="value: income"/>
+        </div>
 	</body>
 </html>
