--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     </head>
 	<body>
         <div class="navbar navbar-inverse navbar-fixed-top">
-            <a class="navbar-brand" href="/">Bernie Sanders Healthcare Calculator</a>
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="/">Bernie Sanders Healthcare Calculator</a>
+                </div>
+            </div>
         </div>
         <div class="container body-content">
             <input data-bind="value: income"/>
