Removed Deductible from advanced

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                 </div>
                             </fieldset>
 
-                            <fieldset class="form-group advanced">
+                            <fieldset class="form-group">
                                 <label for="deductible">Deductible:</label>
                                 <div class="input-group">
                                     <input data-bind="value: deductible" class="form-control currency" placeholder="Enter Deductible" name="deductible" />
