Fix for facebook share button

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <!-- Load Facebook SDK for JavaScript -->
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
-	  var js, fjs = d.getElementsByTagName(s)[0];
-	  if (d.getElementById(id)) return;
-	  js = d.createElement(s); js.id = id;
-	  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1";
-	  fjs.parentNode.insertBefore(js, fjs);
-	}(document, 'script', 'facebook-jssdk'));</script>
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
 
         <div class="navbar navbar-inverse navbar-fixed-top">
@@ -47,7 +47,7 @@
                         <a href="https://twitter.com/share" class="twitter-share-button"{count} data-size="large">Tweet</a>
                         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                         <!--<div class="g-plus" data-action="share" data-annotation="bubble"></div>-->
-                        <div class="fb-share-button" data-href="http://valadian.github.io/SandersHealthcareCalculator" data-layout="button_count"></div>
+                        <div class="fb-share-button" data-href="http://valadian.github.io/SandersHealthcareCalculator" data-layout="button"></div>
                         <!--<span class='st_twitter_large' displayText='Tweet'></span>-->
                         <!--<span class='st_pinterest_large' displayText='Pinterest'></span>-->
                         <!--<span class='st_email_large' displayText='Email'></span>-->
