--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <form>
                 <div class="row">
                     <div class="col-sm-6">
-                        <a href="https://twitter.com/share" class="twitter-share-button"{count} data-size="large">Tweet</a>
+                        <a href="https://twitter.com/share" class="twitter-share-button"{count}>Tweet</a>
                         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                         <!--<div class="g-plus" data-action="share" data-annotation="bubble"></div>-->
                         <div class="fb-share-button" data-href="http://valadian.github.io/SandersHealthcareCalculator" data-layout="button"></div>
