--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
                         <div class="panel-heading changelog-toggle">ChangeLog</div>
                         <div class="panel-body" style="display:none">
                             <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/65e67ecdd4eb609a050509bf6b5578304a7178bf">2016.01.18.1849</a> v0.1 Initial Release</p>
+                            <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/de89a1c4dc126d3f7e14f12284a7b69d6b7810fe">2016.01.18.1955</a> v0.2 Fixed negative taxable income. Added Share buttons</p>
                         </div>
                     </div>
                 </div>
