--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="/">Bernie Sanders Healthcare Calculator</a>
+                    <a class="navbar-brand" href="https://berniesanders.com">
+                        <img src="Content/Bernie2016.png" style="width:100px;">
+                    </a>
+                    <div class="col-xs-6 title"><img src="Content/Title.png"></div>
+
+                    <!--<a class="navbar-brand" href="/">Bernie Sanders Healthcare Calculator</a>-->
                 </div>
             </div>
         </div>
@@ -342,7 +347,7 @@
                         <div class="panel-heading changelog-toggle">ChangeLog</div>
                         <div class="panel-body" style="display:none">
                             <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/65e67ecdd4eb609a050509bf6b5578304a7178bf">2016.01.18.1849</a> v0.1 Initial Release</p>
-                            <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/de89a1c4dc126d3f7e14f12284a7b69d6b7810fe">2016.01.18.1955</a> v0.2 Fixed negative taxable income. Added Share buttons</p>
+                            <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/3c90a44c4532c49a28b8df41858097a06dcd1214">2016.01.18.1955</a> v0.2 Fixed negative taxable income. Added Share buttons</p>
                         </div>
                     </div>
                 </div>
