--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
         <meta property="og:description"   content="Javascript calculator to compare Bernie Sanders Single-Payer Healthcare plan to the Affordable Care Act" />
         <meta property="og:image"         content="https://s.bsd.net/bernie16/main/page/-/website/fb-share.png" />
 
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-72586539-1', 'auto');
+          ga('send', 'pageview');
+
+        </script>
     </head>
 	<body>
     <!-- Load Facebook SDK for JavaScript -->
@@ -32,7 +42,6 @@
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-
 
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
@@ -64,13 +73,14 @@
                         <!--<span class='st_email_large' displayText='Email'></span>-->
                     </div>
                 </div>
+                <br>
                 <div class="row">
                     <div class="col-md-6 savings">
-                        <div data-bind="text: employeeSavingsText()"></div>
+                        <div data-bind="text: employeeSavingsText(), css: { 'bg-success': employeeSavings()>=0, 'bg-danger': employeeSavings()<0 }"></div>
                         <div data-bind="text: employeeSavingsFormatted(), css: { 'bg-success': employeeSavings()>=0, 'bg-danger': employeeSavings()<0 }"></div>
                     </div>
                     <div class="col-md-6 savings">
-                        <div data-bind="text: employerSavingsText()"></div>
+                        <div data-bind="text: employerSavingsText(), css: { 'bg-success': employerSavings()>=0, 'bg-danger': employerSavings()<0 }"></div>
                         <div data-bind="text: employerSavingsFormatted(), css: { 'bg-success': employerSavings()>=0, 'bg-danger': employerSavings()<0 }"></div>
                     </div>
                 </div>
