--- a/index.html
+++ b/index.html
@@ -361,10 +361,11 @@
                     <div class="panel panel-default">
                         <div class="panel-heading changelog-toggle">ChangeLog</div>
                         <div class="panel-body" style="display:none">
-                            <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/65e67ecdd4eb609a050509bf6b5578304a7178bf">2016.01.18.1849</a> v0.1 Initial Release</p>
-                            <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/3c90a44c4532c49a28b8df41858097a06dcd1214">2016.01.18.1955</a> v0.2 Fixed negative taxable income. Added Share buttons</p>
-                            <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/699492e42fb0c7570fc848c8996667fa4782305e">2016.01.18.2059</a> v0.3 Bernie Branded Header!</p>
-                            <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/f81a4cfcec95b35ba2037a2934160b261ca5db6f">2016.01.18.2122</a> v0.4 Added Link to original Proposal PDF</p>
+                            <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/65e67ecdd4eb609a050509bf6b5578304a7178bf">2016.01.18.1849</a> v0.1.0 Initial Release</p>
+                            <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/3c90a44c4532c49a28b8df41858097a06dcd1214">2016.01.18.1955</a> v0.1.1 Fixed negative taxable income. Added Share buttons</p>
+                            <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/699492e42fb0c7570fc848c8996667fa4782305e">2016.01.18.2059</a> v0.2.0 Bernie Branded Header!</p>
+                            <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/f81a4cfcec95b35ba2037a2934160b261ca5db6f">2016.01.18.2122</a> v0.2.1 Added Link to original Proposal PDF</p>
+                            <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/4cd14103703d4dc9b8b3a139b2e3582c8ed30d30">2016.01.18.2251</a> v0.2.2 Floated savings</p>
 
                         </div>
                     </div>
