--- a/index.html
+++ b/index.html
@@ -389,6 +389,7 @@
                             <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/699492e42fb0c7570fc848c8996667fa4782305e">2016.01.18.2059</a> v0.2.0 Bernie Branded Header!</p>
                             <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/f81a4cfcec95b35ba2037a2934160b261ca5db6f">2016.01.18.2122</a> v0.2.1 Added Link to original Proposal PDF</p>
                             <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/4cd14103703d4dc9b8b3a139b2e3582c8ed30d30">2016.01.18.2251</a> v0.2.2 Floated savings</p>
+                            <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/385b8db09b36005d6732089ebef33b7d0160902c">2016.01.19.0031</a> v0.3.0 New Comparison Boxes, New Tax Brackets, & Capital Gains Changes</p>
 
                         </div>
                     </div>
