reworded Obamacare/Berniecare

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                             </fieldset>
 
                             <fieldset class="form-group bernieReplacing rounded-top">
-                                <label for="employeeHealthCareCost">Estimated ObamaCare Costs:</label>
+                                <label for="employeeHealthCareCost">Old ObamaCare Costs:</label>
                                 <div class="input-group">
                                     <div class="input-group-addon info whoLabel">Employee</div>
                                     <input data-bind="value: employeeHealthCareCost()" class="form-control currency" name="employeeHealthCareCost" readonly />
@@ -361,7 +361,7 @@
                             </fieldset>
 
                             <fieldset class="form-group bernieNew rounded-bottom">
-                                <label for="employeeBernieCareTax" class="bernieText">Estimated BernieCare Costs:</label>
+                                <label for="employeeBernieCareTax" class="bernieText">New BernieCare Costs:</label>
                                 <div class="input-group">
                                     <div class="input-group-addon info whoLabel">Employee</div>
                                     <input data-bind="value: employeeBernieCareTax()" class="form-control currency" name="employeeBernieCareTax" readonly />
