changed around some elements
moved the advance panel button to its correct place.
Moved the result panel to its own page

--- a/index.html
+++ b/index.html
@@ -347,6 +347,19 @@
                                     <input data-bind="value: uninsuredPenalty" class="form-control currency" name="uninsuredPenalty" />
                                 </div>
                             </fieldset>
+						</div>
+						<div class="panel-footer">
+							<div class="advanced-toggle rounded pull-right">
+								Advanced
+								<span class="glyphicon glyphicon-chevron-down"></span>
+								<span class="glyphicon glyphicon-chevron-up" style="display:none;"></span>
+							</div>
+						</div>
+					</div>
+
+					<div class="panel panel-default">
+                        <div class="panel-heading">Result</div>
+                        <div class="panel-body">
 
                             <fieldset class="form-group bernieReplacing rounded-top">
                                 <label for="employeeHealthCareCost">Old ObamaCare Costs:</label>
@@ -371,13 +384,9 @@
                                     <input data-bind="value: employerBernieCareTax(), tooltip: {title: '6.2% payroll tax on ALL income', trigger: 'focus' }" class="form-control currency" name="employerBernieCareTax" readonly />
                                 </div>
                             </fieldset>
+
                         </div>
                         <div class="panel-footer">
-                            <div class="advanced-toggle rounded pull-right">
-                                Advanced
-                                <span class="glyphicon glyphicon-chevron-down"></span>
-                                <span class="glyphicon glyphicon-chevron-up" style="display:none;"></span>
-                            </div>
                         </div>
 
                     </div>
@@ -390,7 +399,6 @@
                             <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/f81a4cfcec95b35ba2037a2934160b261ca5db6f">2016.01.18.2122</a> v0.2.1 Added Link to original Proposal PDF</p>
                             <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/4cd14103703d4dc9b8b3a139b2e3582c8ed30d30">2016.01.18.2251</a> v0.2.2 Floated savings</p>
                             <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/385b8db09b36005d6732089ebef33b7d0160902c">2016.01.19.0031</a> v0.3.0 New Comparison Boxes, New Tax Brackets, & Capital Gains Changes</p>
-
                         </div>
                     </div>
                 </div>
