Google Plus button broken. Commenting until I can sort it out

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                         <div class="fb-share-button" data-href="https://valadian.github.io/SandersHealthcareCalculator" data-layout="button"></div>
 
-                        <div class="g-plus" data-action="share" data-annotation="none"></div>
+                        <!--<div class="g-plus" data-action="share" data-annotation="none"></div>-->
                         <!--<span class='st_twitter_large' displayText='Tweet'></span>-->
                         <!--<span class='st_pinterest_large' displayText='Pinterest'></span>-->
                         <!--<span class='st_email_large' displayText='Email'></span>-->
