implemented cleaner dollar sign

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
                             <fieldset class="form-group">
                                 <label for="premium">Insurance Premiums:</label>
-                                <div class="input-group">
+                                <div class="input-group form-horizontal">
                                     <input data-bind="value: premium" class="form-control currency" placeholder="Enter Insurance Premium" name="premium" />
                                     <select class="form-control" data-bind="value: premiumPeriod">
                                         <option value="52">Weekly</option>
