^ class for medicare for all and obamacare comparison.

--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@
                             <div class="panel-heading">Result</div>
                             <div class="panel-body">
                                 <div class="col-md-6">
-                                    <div class="row">
-                                        <h3 class="text-center bernieReplacing">ObamaCare</h3>
+                                    <div class="row bernieReplacing">
+                                        <h3 class="text-center">ObamaCare</h3>
                                         <hr/>
                                         <div class="col-sm-6 ">
                                             <div class="result-panel">
@@ -454,8 +454,8 @@
                                 </div>
                                     
                                 <div class="col-md-6">
-                                    <div class="row">
-                                        <h3 class="text-center bernieNew">Medicare for All</h3>
+                                    <div class="row bernieNew">
+                                        <h3 class="text-center">Medicare for All</h3>
                                         <hr/>
                                         <div class="col-sm-6">
                                             <div class="result-panel">
