--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             
         </div>
-        <div class="container body-content">
+        <div class="container-fluid body-content">
             <form>
                 <div class="row">
 
