--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             
         </div>
-        <div class="container body-content">
+        <div class="container-fluid body-content">
             <form>
                 <div class="row">
                 </div>
