--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
                             Medicare-for-All.pdf
                         </a> Released by Bernie's campaign on 1/17/2016</p>
                 </div>
-
                 <div class="row shareLinks" style="height:25px">
                     <div class="col-sm-6">
                         <div style="height:20px;width:150px;float:left;">
@@ -73,7 +72,10 @@
                             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                         </div>
                         <div class="fb-share-button" data-href="https://valadian.github.io/SandersHealthcareCalculator" data-layout="button"></div>
-
+                        <!--<div data-bind="click: copyShareLink()" class="btn btn-info" style="height:20px;width:150px;float:left;padding-top:0px">-->
+                            <!--Copy link to Results-->
+                        <!--</div>-->
+                        <!--<input id="shareLink" data-bind="value: shareLink()" class="form-control" style="position:absolute; left:-9999px;top:0">-->
                         <!--<div class="g-plus" data-action="share" data-annotation="none"></div>-->
                         <!--<span class='st_twitter_large' displayText='Tweet'></span>-->
                         <!--<span class='st_pinterest_large' displayText='Pinterest'></span>-->
