got rid of family size row class Added Self-Employed/Retired note

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
                                 <fieldset class="form-group">
                                     <label for="familySize">Family Size:</label>
-                                    <div class="row input-group">
+                                    <div class="input-group">
                                         <div class="col-md-6 nopadding">
                                             <div class="input-group">
                                                 <div class="input-group-addon whoLabel">Adults</div>
@@ -204,6 +204,7 @@
                                     <span class="glyphicon glyphicon-chevron-down"></span>
                                     <span class="glyphicon glyphicon-chevron-up" style="display:none;"></span>
                                 </div>
+                                <div class="pull-right" style="height: 40px;line-height: 40px;">Self-Employed/Retired? Click here <span class="glyphicon glyphicon-arrow-right"></span></div>
                             </div>
                         </div>
 
