fixed issue with children field cutting off

--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
                                 <fieldset class="form-group">
                                     <label for="familySize">Family Size:</label>
                                     <div class="input-group">
-                                        <div class="col-md-6 nopadding">
+                                        <div class="col-lg-6 nopadding">
                                             <div class="input-group">
                                                 <div class="input-group-addon whoLabel">Adults</div>
                                                 <input data-bind="value: adults" class="form-control naturalNumber" name="adults" />
                                             </div>
                                         </div>
-                                        <div class=" col-md-5 col-md-offset-1 nopadding">
+                                        <div class=" col-lg-5 col-lg-offset-1 nopadding">
                                             <div class="input-group">
                                                 <div class="input-group-addon whoLabel">Children</div>
                                                 <input data-bind="value: children" class="form-control naturalNumber" name="children" />
